--- a/build-BBoxTool-Desktop_Qt_5_13_2_MinGW_64_bit-Debug/Makefile.Release
+++ b/build-BBoxTool-Desktop_Qt_5_13_2_MinGW_64_bit-Debug/Makefile.Release
@@ -349,6 +349,7 @@ release/moc_editwindow.cpp: ../BBoxTool/editwindow.h \
 		C:/Qt/5.13.2/mingw73_64/include/QtWidgets/qabstractslider.h \
 		C:/Qt/5.13.2/mingw73_64/include/QtWidgets/qstyle.h \
 		C:/Qt/5.13.2/mingw73_64/include/QtWidgets/qtabbar.h \
+		C:/Qt/5.13.2/mingw73_64/include/QtCore/QStringList \
 		release/moc_predefs.h \
 		C:/Qt/5.13.2/mingw73_64/bin/moc.exe
 	C:\Qt\5.13.2\mingw73_64\bin\moc.exe $(DEFINES) --include "D:/BBox Tool/build-BBoxTool-Desktop_Qt_5_13_2_MinGW_64_bit-Debug/release/moc_predefs.h" -IC:/Qt/5.13.2/mingw73_64/mkspecs/win32-g++ -I"D:/BBox Tool/BBoxTool" -ID:/opencv/opencv/build/include -IC:/Qt/5.13.2/mingw73_64/include -IC:/Qt/5.13.2/mingw73_64/include/QtWidgets -IC:/Qt/5.13.2/mingw73_64/include/QtGui -IC:/Qt/5.13.2/mingw73_64/include/QtANGLE -IC:/Qt/5.13.2/mingw73_64/include/QtCore -I. -IC:/Qt/Tools/mingw730_64/lib/gcc/x86_64-w64-mingw32/7.3.0/include/c++ -IC:/Qt/Tools/mingw730_64/lib/gcc/x86_64-w64-mingw32/7.3.0/include/c++/x86_64-w64-mingw32 -IC:/Qt/Tools/mingw730_64/lib/gcc/x86_64-w64-mingw32/7.3.0/include/c++/backward -IC:/Qt/Tools/mingw730_64/lib/gcc/x86_64-w64-mingw32/7.3.0/include -IC:/Qt/Tools/mingw730_64/lib/gcc/x86_64-w64-mingw32/7.3.0/include-fixed -IC:/Qt/Tools/mingw730_64/x86_64-w64-mingw32/include ..\BBoxTool\editwindow.h -o release\moc_editwindow.cpp
@@ -592,6 +593,7 @@ release/moc_mainwindow.cpp: ../BBoxTool/mainwindow.h \
 		C:/Qt/5.13.2/mingw73_64/include/QtWidgets/qabstractslider.h \
 		C:/Qt/5.13.2/mingw73_64/include/QtWidgets/qstyle.h \
 		C:/Qt/5.13.2/mingw73_64/include/QtWidgets/qtabbar.h \
+		C:/Qt/5.13.2/mingw73_64/include/QtCore/QStringList \
 		release/moc_predefs.h \
 		C:/Qt/5.13.2/mingw73_64/bin/moc.exe
 	C:\Qt\5.13.2\mingw73_64\bin\moc.exe $(DEFINES) --include "D:/BBox Tool/build-BBoxTool-Desktop_Qt_5_13_2_MinGW_64_bit-Debug/release/moc_predefs.h" -IC:/Qt/5.13.2/mingw73_64/mkspecs/win32-g++ -I"D:/BBox Tool/BBoxTool" -ID:/opencv/opencv/build/include -IC:/Qt/5.13.2/mingw73_64/include -IC:/Qt/5.13.2/mingw73_64/include/QtWidgets -IC:/Qt/5.13.2/mingw73_64/include/QtGui -IC:/Qt/5.13.2/mingw73_64/include/QtANGLE -IC:/Qt/5.13.2/mingw73_64/include/QtCore -I. -IC:/Qt/Tools/mingw730_64/lib/gcc/x86_64-w64-mingw32/7.3.0/include/c++ -IC:/Qt/Tools/mingw730_64/lib/gcc/x86_64-w64-mingw32/7.3.0/include/c++/x86_64-w64-mingw32 -IC:/Qt/Tools/mingw730_64/lib/gcc/x86_64-w64-mingw32/7.3.0/include/c++/backward -IC:/Qt/Tools/mingw730_64/lib/gcc/x86_64-w64-mingw32/7.3.0/include -IC:/Qt/Tools/mingw730_64/lib/gcc/x86_64-w64-mingw32/7.3.0/include-fixed -IC:/Qt/Tools/mingw730_64/x86_64-w64-mingw32/include ..\BBoxTool\mainwindow.h -o release\moc_mainwindow.cpp
@@ -861,6 +863,7 @@ release/editwindow.o: ../BBoxTool/editwindow.cpp ../BBoxTool/editwindow.h \
 		C:/Qt/5.13.2/mingw73_64/include/QtWidgets/qabstractslider.h \
 		C:/Qt/5.13.2/mingw73_64/include/QtWidgets/qstyle.h \
 		C:/Qt/5.13.2/mingw73_64/include/QtWidgets/qtabbar.h \
+		C:/Qt/5.13.2/mingw73_64/include/QtCore/QStringList \
 		ui_editwindow.h \
 		C:/Qt/5.13.2/mingw73_64/include/QtCore/QDirIterator \
 		C:/Qt/5.13.2/mingw73_64/include/QtCore/qdiriterator.h \
@@ -1111,6 +1114,7 @@ release/main.o: ../BBoxTool/main.cpp ../BBoxTool/mainwindow.h \
 		C:/Qt/5.13.2/mingw73_64/include/QtWidgets/qabstractslider.h \
 		C:/Qt/5.13.2/mingw73_64/include/QtWidgets/qstyle.h \
 		C:/Qt/5.13.2/mingw73_64/include/QtWidgets/qtabbar.h \
+		C:/Qt/5.13.2/mingw73_64/include/QtCore/QStringList \
 		C:/Qt/5.13.2/mingw73_64/include/QtWidgets/QApplication \
 		C:/Qt/5.13.2/mingw73_64/include/QtWidgets/qapplication.h \
 		C:/Qt/5.13.2/mingw73_64/include/QtCore/qcoreapplication.h \
@@ -1359,6 +1363,7 @@ release/mainwindow.o: ../BBoxTool/mainwindow.cpp ../BBoxTool/mainwindow.h \
 		C:/Qt/5.13.2/mingw73_64/include/QtWidgets/qabstractslider.h \
 		C:/Qt/5.13.2/mingw73_64/include/QtWidgets/qstyle.h \
 		C:/Qt/5.13.2/mingw73_64/include/QtWidgets/qtabbar.h \
+		C:/Qt/5.13.2/mingw73_64/include/QtCore/QStringList \
 		ui_mainwindow.h \
 		C:/Qt/5.13.2/mingw73_64/include/QtCore/QString \
 		C:/Qt/5.13.2/mingw73_64/include/QtWidgets/QFileDialog \
